# browser-use-scripts

./: .gitignore
posting/: main.py  pyproject.toml
queue/: main.py  pyproject.toml
telegram/: agent.py  main.py  pyproject.toml
