[project]
name = "telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.48",
    "langchain-openai>=0.3.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
